package com.example.booksappcompose.util


object TestTags {
    const val READ_EVERYTIME = "Read Everytime"
    const val GET_STARTED = "GET_STARTED"
    const val HOME_MENU = "HOME_MENU"
    const val ORDER_SECTION = "ORDER_SECTION"
    const val ASCENDING_RADIO_BUTTON = "ASCENDING_RADIO_BUTTON"
    const val TITLE_RADIO_BUTTON = "TITLE_RADIO_BUTTON"
    const val SEARCH_TEXT_FIELD = "SEARCH_TEXT_FIELD"
    const val SEARCH_ITEM = "SEARCH_ITEM"
    const val MODAL_BOTTOM_SHEET = "MODAL_BOTTOM_SHEET"
    const val SAVE_BOOK = "SAVE_BOOK"
    const val SAVED_BOOK_ITEM = "SAVED_BOOK_ITEM"
    const val SAVED_BOOK_UNSAVED = "SAVED_BOOK_UNSAVED"
}