<resources>
    <string name="app_name">BooksAppCompose</string>
    <string name="home_page_cover">Home page cover</string>
    <string name="read_everytime">Read Everytime</string>
    <string name="buy_and_read_your_favorite">Buy and read you favorite</string>
    <string name="book_with_best_price">book with best price</string>
    <string name="get_started">Get Started</string>
    <string name="home_menu">Home menu</string>
    <string name="search">Search…</string>
    <string name="recommended">Recommended</string>
    <string name="see_all">See all</string>
    <string name="shopping">ShoppingBooks</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="Oops_something_went_wrong">Oops something went wrong</string>
    <string name="please_check_your_connection">Please check your connection</string>
    <string name="price">$15</string>
    <string name="add">Add</string>
    <string name="enter_year">Enter year..</string>
    <string name="enter_month">Enter month..</string>
    <string name="view_books">View Books</string>
    <string name="from_sheet">Botton sheet clicked!!!</string>
    <string name="empty_list">Empty List</string>
    <string name="download">Downlaod</string>
    <string name="more_vert">MoreVertical</string>
    <string name="delete_from_library">Delete from library</string>
    <string name="save_to_library">Save to library</string>
    <string name="saved">Saving…</string>
    <string name="this_book_already_saved">Already saved</string>
    <string name="home_screen">Home screen</string>
    <string name="favourites_screen">Favourites screen</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="rating">Rating</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="your_library">Your library</string>
    <string name="sort">Sort</string>
    <string name="unsave">Unsave</string>
    <string name="arrow_back">Arrow back</string>
    <string name="home_screen_image">Home image</string>
    <string name="detail_back">Detail back arrow</string>
    <string name="detail_favourite">Detail favourite</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="buy_now">Buy now</string>
    <string name="buy_now_arrow">Buy now arrow</string>
    <string name="rating_detail_star">Rating detail star</string>
    <string name="slash">/</string>
    <string name="book_overview">Book Overview</string>
    <string name="read_more">… read more</string>
    <string name="read_less">… read less</string>
</resources>